add external api to create products with EAN
